igw.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "AWS-IGW"

  }
}
output "IGWInformation" {
  value = ["${aws_internet_gateway.gw.id}"]
}
